# Cpp.MiniSocket

./: CMakeLists.txt  README.md  build.sh  build_debug.sh  build_msys.sh
bearssl/bsd/: README.md
bearssl/bsd/both_auth/: Makefile  README.md  client-chain-rsa.h  client-key-rsa.h  client-trust-anchor.h  client.crt  client.csr  client.key  client_basic  client_basic.c  client_both_auth  client_both_auth.c  enccert_cli.sh  enccert_srv.sh  gencert_cli.sh  gencert_srv.sh  server-chain-rsa.h  server-key-rsa.h  server-trust-anchor.h  server.crt  server.csr  server.key  server_basic  server_basic.c  server_both_auth  server_both_auth.c
bearssl/bsd/single_auth/: README.md  chain-rsa.h  client_basic.c  enccert.sh  gencert.sh  key-rsa.h  server.crt  server.csr  server.key  server_basic.c  test.sh  trust-anchor.h
benchmark/bsd/: CMakeLists.txt
benchmark/bsd/common/: config.hpp  connect_nonb.cpp  connect_timeo.cpp  connect_timeo.hpp  err_quit.hpp  myaddrs.cpp  recv_all.cpp  recv_until.cpp  recv_until.hpp  send_all.cpp  send_all.hpp  sock_ntop.cpp  sock_ntop.hpp  (+10 more)
benchmark/bsd/tcpcliserv/: CMakeLists.txt  Makefile  drive_tcp_conn_timeo.sh  drive_tcp_fork.sh  drive_tcp_select.sh  drive_tcp_snd_timeo.sh  str_cli.cpp  str_cli_select.cpp  str_echo.cpp  tcpcli.cpp  tcpcli_byname.cpp  tcpcli_conn_timeo.cpp  tcpcli_rcv_timeo.cpp  tcpcli_snd_timeo.cpp  tcpcli_timeo.cpp  tcpserv.cpp  tcpserv_byname.cpp  tcpserv_conn_timeo.cpp  tcpserv_fork.cpp  tcpserv_poll.cpp  tcpserv_rcv_timeo.cpp  tcpserv_reuseaddr.cpp  tcpserv_select.cpp  tcpserv_snd_timeo.cpp
benchmark/linux/: CMakeLists.txt
benchmark/linux/common/: connect_nonb.cpp  connect_nonb.hpp  myaddrs.cpp  recv_all.hpp  send_all.cpp  sock_ntop_host.hpp  tcp_connect_timeo.cpp  tcp_listen.cpp  udp_connect.cpp  udp_connect.hpp  udp_server.cpp
benchmark/linux/daytimetcp/: daytimetcpcli.cpp  daytimetcpsrv.cpp
benchmark/linux/daytimeudp/: Makefile  daytimeudpcli.cpp  daytimeudpcli_byname.cpp  daytimeudpsrv.cpp  daytimeudpsrv_byname.cpp  drive_daytimeudp.sh
benchmark/linux/ioctl/: Makefile
benchmark/linux/names/: Makefile  getaddrinfo_a_sample.cpp  hostent2.cpp  hostent5.cpp  hostent6.cpp  hostent_timeo.cpp
benchmark/linux/netlink/: Makefile  netstat_monitor
benchmark/linux/simplehttp/: httpcli.cpp
benchmark/linux/tcpcheck/: Makefile  tcpcheck_timeo2.cpp  tcpcheck_timeo3.cpp
benchmark/linux/tcpcliserv/: CMakeLists.txt  Makefile  drive_tcp_conn_timeo.sh  str_cli.cpp  str_cli.hpp  str_echo.hpp  tcpcli  tcpcli_byname  tcpcli_byname.cpp  tcpcli_conn_timeo  tcpcli_rcv_timeo  tcpcli_select  tcpcli_snd_timeo  tcpserv  tcpserv.cpp  tcpserv_byname  tcpserv_byname.cpp  tcpserv_conn_timeo  tcpserv_conn_timeo.cpp  tcpserv_fork  tcpserv_fork.cpp  tcpserv_poll  tcpserv_poll.cpp  tcpserv_rcv_timeo  tcpserv_rcv_timeo.cpp  tcpserv_reuseaddr  tcpserv_reuseaddr.cpp  tcpserv_select  tcpserv_select.cpp  tcpserv_snd_timeo
benchmark/linux/udpcliserv/: dg_cli.cpp  dg_cli.hpp  dg_echo.hpp  udpserv.cpp  udpserv_byname.cpp
benchmark/linux/unixdomain/: Makefile  acpi_listen.cpp  acpi_listen2.cpp
benchmark/win/tcpcliserv/: CMakeLists.txt  Makefile  drive_tcp.sh  drive_tcp_rcv_timeo.sh  str_cli.cpp  str_cli.hpp  str_echo.cpp  tcpcli.cpp  tcpcli_byname.cpp  tcpcli_conn_timeo.cpp  tcpcli_rcv_timeo.cpp  tcpcli_snd_timeo.cpp  tcpcli_timeo.cpp  tcpserv.cpp  tcpserv_byname.cpp  tcpserv_conn_timeo.cpp  tcpserv_poll.cpp  tcpserv_rcv_timeo.cpp  tcpserv_reuseaddr.cpp  tcpserv_select.cpp  tcpserv_snd_timeo.cpp
benchmark/win/udpcliserv/: CMakeLists.txt  Makefile  dg_cli.cpp  dg_cli.hpp  dg_echo.cpp  drive_udp.sh  udpcli.cpp  udpcli_byname.cpp  udpserv.cpp  udpserv_byname.cpp
benchmark/windows/: CMakeLists.txt  build.sh
benchmark/windows/common/: CMakeLists.txt  connect_timeo.hpp  err_quit.cpp  recv_until.hpp  sock_ntop.cpp  sock_ntop.hpp  sock_ntop_host.hpp  tcp_connect.hpp  tcp_listen.cpp  tcp_listen.hpp  udp_connect.cpp  udp_server.cpp
benchmark/windows/daytimetcp/: daytimetcpsrv_byname.cpp
benchmark/windows/daytimeudp/: Makefile  daytimeudpsrv.cpp
benchmark/windows/names/: hostent3.cpp  hostent4.cpp
benchmark/windows/tcpcliserv/: drive_tcp_byname.sh  drive_tcp_conn_timeo.sh  drive_tcp_poll.sh  drive_tcp_reuseaddr.sh  str_cli.cpp  str_echo.cpp  str_echo.hpp  tcpcli.cpp  tcpserv.cpp  tcpserv_reuseaddr.cpp  tcpserv_select.cpp  tcpserv_snd_timeo.cpp
benchmark/windows/udpcliserv/: dg_cli.cpp  dg_echo.cpp  dg_echo.hpp  drive_udp_byname.sh  udpcli.cpp  udpserv.cpp
doc/: Doxyfile  README.md  mainpage.md  mainpage.txt
include/: CommunicatingSocket.hpp  DNSResolver.hpp  GAIException.hpp  SYSException.hpp  Socket.hpp  SocketAddress.hpp  SocketAddressView.hpp  SocketCommon.hpp  SocketError.hpp  SocketException.hpp  SocketExceptions.hpp  TCPServerSocket.hpp  TCPSocket.hpp  UDPClientSocket.hpp  UDPSocket.hpp  mini_socket.hpp  tcp_connect.hpp  udp_connect.hpp
samples/: CMakeLists.txt  Makefile  Makefile.back  daytimetcpcli.cpp  daytimetcpsrv.cpp  sample_socket_address.cpp
samples/addr/: CMakeLists.txt  Makefile  sample_socket_address.cpp  test.sh
samples/daytimetcp/: CMakeLists.txt  daytimetcpcli.cpp  daytimetcpsrv.cpp  test_daytimetcp.sh
samples/daytimeudp/: CMakeLists.txt  daytimeudpcli.cpp  daytimeudpsrv.cpp  test_daytimeudp.sh
samples/names/: CMakeLists.txt  Makefile  hostent.cpp  test.sh
samples/tcpcliserv/: CMakeLists.txt  Makefile  str_cli.cpp  str_cli.hpp  str_echo.cpp  str_echo.hpp  tcpcli.cpp  tcpcli_byname.cpp  tcpserv.cpp  test_tcp.sh  test_tcp_byname.sh
samples/udpcliserv/: CMakeLists.txt  Makefile  dg_cli.cpp  dg_cli.hpp  dg_cli_connected.cpp  dg_cli_connected.hpp  dg_echo.cpp  dg_echo.hpp  test_udp.sh  test_udp_byname.sh  udpcli.cpp  udpcli_byname.cpp  udpserv.cpp
src/: CMakeLists.txt  CommunicatingSocket.cpp  DNSResolver.cpp  GAIException.cpp  Makefile  README.txt  SYSException.cpp  Socket.cpp  SocketAddress.cpp  SocketAddressView.cpp  SocketCommon.cpp  SocketError.cpp  SocketException.cpp  SocketExceptions.cpp  TCPServerSocket.cpp  TCPSocket.cpp  UDPClientSocket.cpp  UDPSocket.cpp  mini_socket.cpp  tcp_connect.cpp  udp_connect.cpp
(+74 files in other folders)
